Lyckades fixa så att knapparna är korrekt alignade i navbaren genom att lägga till 'px-0' i classen på columnen, har även bytt färgskema till ett rosa

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -65,16 +65,16 @@ body {
 
 .btn-change{
     height: 50px;
-    width: 210px;
-    background: #446DE0;
+    width: 215px;
+    background: #ff9999;
     float: center; 
-    box-shadow: 0 0 1px #446DE0;
+    box-shadow: 0 0 1px #ff9999;
     -webkit-transition: all 0.5s ease-in-out;
 }
 
 .btn-change:hover{
   -webkit-transition: scale(1.1);
-  background-color: #2851AD !important;
+  background-color: #ff6666 !important;
 }
 
 [tabindex="-1"]:focus {
